--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #jdbc driver class name
-spring.datasource.url=jdbc:mysql://localhost:3306/myblogapp?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/myblogapp?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=root
 
